...
        variant="solid"
        size="lg"
        className="mt-5 h-12 bg-[#ff7979]"
        onPress={handleSubmit(onSubmit)}
        disabled={isSubmitting}>
        <ButtonText className="text-sm">
          {isSubmitting ? 'Signing in...' : 'Continue'}
        </ButtonText>
      </Button>
    </>
  );
};

...
