appId: com.company.nospendchallengeapp
---
- runScript: translations.js
- launchApp
- tapOn: ${output.translations.welcome.already_have_account}
- assertVisible: 'Welcome back!'

# Fix email and test empty password
- tapOn: 'Email'
- inputText: 'kauepbd@gmail.com'
- hideKeyboard
- tapOn: 'Continue'
- assertVisible: 'Password must be at least 6 characters'

# Test successful Sign In
- tapOn: 'Password'
- inputText: 'Pass123!'
- hideKeyboard
- tapOn: 'Continue'
- assertVisible: 'Your Challenges'
- assertVisible: 'Recent Activities'
